[package]
name = "salvo_macro_ext"
version = "0.1.2"
edition = "2021"
authors = ["Andeya Lee <andeyalee@outlook.com>"]
license = "MIT"
homepage = "https://github.com/andeya/salvo_macro_ext"
repository = "https://github.com/andeya/salvo_macro_ext"
documentation = "https://docs.rs/salvo_macro_ext"
readme = "README.md"
description = "Unofficial extension macros for the salvo web framework."
keywords = ["http", "async", "web", "framework", "server"]
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "network-programming",
    "asynchronous",
]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { version = ">= 2, <= 4" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
salvo = { version = "0.72", features = ["oapi"] }
tokio = "1"
